opencollabnew/css/screen.css: Fix navbar icon alignment on bigger font size.

--- a/collab/htdocs/codenomiconnew/css/screen.css
+++ b/collab/htdocs/codenomiconnew/css/screen.css
@@ -8,6 +8,10 @@
     font-size: 16px;
 }
 
+.navbar .glyphicon {
+    top: 3px;
+}
+
 #logo {
     padding: 5px 10px;
     margin: 3px 10px;
